# Subdub

./: .gitignore  README.md  pyproject.toml  requirements.txt  subdub.py
.github/workflows/: ci.yml
src/subdub/: __init__.py  app.py  app_helpers.py  cli.py  cli_args.py  cli_helpers.py  config.py  context.py  errors.py  models.py  types.py
src/subdub/ai/: __init__.py  client.py  correction.py  evaluation.py  memory.py  transcribe.py  translate.py  translation.py
src/subdub/core/: logger.py  network.py
src/subdub/corrector/: __init__.py  config.py  engine.py
src/subdub/corrector/gui/: __init__.py  app.py  canvas.py  dialogs.py  player.py
src/subdub/media/: __init__.py  audio.py  ffmpeg.py  tts.py
src/subdub/prompts/: __init__.py  correction.py  resegment.py  system.py  translation.py  zoom.py
src/subdub/schemas/: __init__.py  llm.py
src/subdub/subtitles/: __init__.py  chunking.py  srt_utils.py  zoom.py
src/subdub/tasks/: __init__.py  correction.py  input.py  runtime.py  speech.py  state.py  transcribe.py  translation.py
src/subdub/workflows/: dubbing.py  pipeline.py
tests/: test_app_helpers.py  test_smoke.py
